--- a/kontakt.html
+++ b/kontakt.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="pl">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Kontakt &ndash; AquiVivo</title>
+    <title>Contacto &ndash; AquiVivo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
@@ -21,39 +21,39 @@
           <div class="heroTitleRow">
             <div class="heroIcon">&#128222;</div>
             <div>
-              <h1 class="glow-text" style="margin: 0">Kontakt</h1>
+              <h1 class="glow-text" style="margin: 0">Contacto</h1>
               <div class="subtitle" style="margin-top: 6px">
-                Dane kontaktowe i godziny dostępności.
+                Datos de contacto y horario de atención.
               </div>
             </div>
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">Dane firmy</div>
+          <div class="sectionTitle" style="margin-top: 0">Datos de la empresa</div>
           <div class="muted">
             <strong>Magdalena Meller</strong><br />
             ul. Katowicka 2F/6.01<br />
-            61-131 Poznań, Polska<br />
+            61-131 Poznań, Polonia<br />
             NIP: 7822348796<br />
             REGON: 542556870
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">Kontakt</div>
+          <div class="sectionTitle" style="margin-top: 0">Contacto</div>
           <div class="muted">
-            E-mail:
+            Correo:
             <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a><br />
             Tel.: <a href="tel:+48669697151">+48 669 697 151</a>
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">Godziny kontaktu</div>
+          <div class="sectionTitle" style="margin-top: 0">Horario de atención</div>
           <div class="muted">
-            Kontakt mailowy: 7 dni w tygodniu<br />
-            Kontakt telefoniczny: poniedziałek&ndash;piątek, 10:00&ndash;16:00
+            Contacto por correo: 7 días a la semana<br />
+            Contacto telefónico: lunes&ndash;viernes, 10:00&ndash;16:00
           </div>
         </section>
       </div>
