--- a/polityka-prywatnosci.html
+++ b/polityka-prywatnosci.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="pl">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Polityka prywatności &ndash; AquiVivo</title>
+    <title>Política de privacidad &ndash; AquiVivo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
@@ -21,9 +21,9 @@
           <div class="heroTitleRow">
             <div class="heroIcon">&#128274;</div>
             <div>
-              <h1 class="glow-text" style="margin: 0">Polityka prywatności</h1>
+              <h1 class="glow-text" style="margin: 0">Política de privacidad</h1>
               <div class="subtitle" style="margin-top: 6px">
-                Jak przetwarzamy dane w AquiVivo.
+                Cómo tratamos tus datos en AquiVivo.
               </div>
             </div>
           </div>
@@ -31,108 +31,111 @@
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">
-            Administrator danych
+            Responsable del tratamiento
           </div>
           <div class="muted">
-            Magdalena Meller, ul. Katowicka 2F/6.01, 61-131 Poznań, Polska.<br />
+            Magdalena Meller, ul. Katowicka 2F/6.01, 61-131 Poznań, Polonia.<br />
             NIP: 7822348796, REGON: 542556870<br />
-            E-mail:
+            Correo:
             <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a>,
             Tel.: <a href="tel:+48669697151">+48 669 697 151</a>
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">Zakres danych</div>
+          <div class="sectionTitle" style="margin-top: 0">Datos que tratamos</div>
           <div class="muted">
-            Przetwarzamy w szczególności dane potrzebne do utworzenia konta i
-            realizacji usług: e-mail, identyfikator użytkownika, nazwa/handle,
-            dane profilu, dane dotyczące postępów nauki, dane techniczne
-            urządzenia i połączenia (np. adres IP), a także dane płatności
-            (przetwarzane przez operatorów płatności).
+            Tratamos, en particular, los datos necesarios para crear una cuenta
+            y prestar los servicios: correo electrónico, identificador del
+            usuario, nombre/handle, datos de perfil, datos sobre el progreso de
+            aprendizaje, datos técnicos del dispositivo y de la conexión (por
+            ejemplo, dirección IP), así como datos de pago (tratados por los
+            proveedores de pago).
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">
-            Cele i podstawa prawna
+            Finalidades y base legal
           </div>
           <div class="muted">
-            Dane przetwarzamy w celu:
+            Tratamos los datos para:
             <ul>
               <li>
-                realizacji umowy i świadczenia usług (art. 6 ust. 1 lit. b
-                RODO),
+                la ejecución del contrato y la prestación de los servicios (art.
+                6.1(b) del RGPD),
               </li>
               <li>
-                obsługi płatności i rozliczeń (art. 6 ust. 1 lit. b/c RODO),
+                la gestión de pagos y facturación (art. 6.1(b)/(c) del RGPD),
               </li>
               <li>
-                zapewnienia bezpieczeństwa i prawidłowego działania serwisu
-                (art. 6 ust. 1 lit. f RODO),
+                la seguridad y el correcto funcionamiento del servicio (art.
+                6.1(f) del RGPD),
               </li>
               <li>
-                kontaktowego wsparcia użytkownika (art. 6 ust. 1 lit. b/f RODO).
+                el soporte y la atención al usuario (art. 6.1(b)/(f) del RGPD).
               </li>
             </ul>
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">Odbiorcy danych</div>
+          <div class="sectionTitle" style="margin-top: 0">
+            Destinatarios de los datos
+          </div>
           <div class="muted">
-            Korzystamy z podwykonawców w zakresie infrastruktury i płatności:
+            Utilizamos proveedores (encargados) para infraestructura y pagos:
             <ul>
-              <li>Firebase / Google (uwierzytelnianie, baza danych, pliki),</li>
-              <li>Stripe (płatności kartą),</li>
-              <li>Przelewy24 / PayPro S.A. (płatności P24),</li>
-              <li>GitHub Pages (hosting strony).</li>
+              <li>Firebase / Google (autenticación, base de datos, archivos),</li>
+              <li>Stripe (pagos con tarjeta),</li>
+              <li>Przelewy24 / PayPro S.A. (pagos P24),</li>
+              <li>GitHub Pages (hosting del sitio).</li>
             </ul>
-            Dane są przetwarzane zgodnie z ich politykami prywatności oraz
-            umowami powierzenia.
+            Los datos se tratan de acuerdo con sus políticas de privacidad y los
+            acuerdos de tratamiento.
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">
-            Okres przechowywania
+            Plazo de conservación
           </div>
           <div class="muted">
-            Dane konta przechowujemy przez czas posiadania konta, a po jego
-            usunięciu przez okres niezbędny do realizacji obowiązków prawnych
-            (np. księgowość). Dane techniczne przechowujemy przez okres
-            niezbędny do zapewnienia bezpieczeństwa i poprawnego działania
-            serwisu.
+            Conservamos los datos de la cuenta mientras exista la cuenta y,
+            tras su eliminación, durante el tiempo necesario para cumplir
+            obligaciones legales (por ejemplo, contabilidad). Los datos técnicos
+            se conservan durante el tiempo necesario para garantizar la
+            seguridad y el correcto funcionamiento del servicio.
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">
-            Prawa użytkownika
+            Derechos del usuario
           </div>
           <div class="muted">
-            Masz prawo dostępu do danych, ich sprostowania, usunięcia,
-            ograniczenia przetwarzania, przenoszenia, wniesienia sprzeciwu oraz
-            złożenia skargi do UODO.
+            Tienes derecho de acceso a los datos, rectificación, supresión,
+            limitación del tratamiento, portabilidad, oposición y a presentar
+            una reclamación ante la autoridad de protección de datos (UODO).
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">
-            Cookies i analityka
+            Cookies y analítica
           </div>
           <div class="muted">
-            Serwis korzysta z niezbędnych technicznych plików
-            cookies/localStorage do utrzymania sesji i bezpieczeństwa. Nie
-            znaleźliśmy implementacji Google Analytics ani Meta Pixel w kodzie
-            produkcyjnym.
+            El sitio utiliza cookies/localStorage técnicos imprescindibles para
+            mantener la sesión y la seguridad. No hemos encontrado una
+            implementación de Google Analytics ni de Meta Pixel en el código de
+            producción.
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">Kontakt</div>
+          <div class="sectionTitle" style="margin-top: 0">Contacto</div>
           <div class="muted">
-            W sprawach prywatności skontaktuj się:
+            Para asuntos de privacidad, contáctanos:
             <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a>
           </div>
         </section>
