--- a/services.html
+++ b/services.html
@@ -41,6 +41,25 @@
           <div class="hintSmall" id="trialMsg" style="margin-top: 8px; display: none"></div>
         </div>
 
+        <div class="card" style="margin-bottom: 18px">
+          <div class="sectionTitle" style="margin-top: 0">✅ Antes de comprar</div>
+          <div class="muted">
+            <div class="hintSmall" style="margin-top: 6px">
+              Al iniciar el pago aceptas los <a href="regulamin.html">Términos</a> y la
+              <a href="polityka-prywatnosci.html">Política de privacidad</a>. Si tu compra
+              incluye contenido digital con acceso inmediato, solicitas la entrega inmediata
+              y reconoces la posible pérdida del derecho de desistimiento una vez otorgado el
+              acceso (ver <a href="zwroty.html">Devoluciones</a>).
+            </div>
+            <div class="metaRow" style="margin-top: 10px; align-items: flex-start; gap: 10px">
+              <input id="checkoutConsent" type="checkbox" />
+              <label for="checkoutConsent" style="margin: 0">
+                He leído y acepto lo anterior.
+              </label>
+            </div>
+          </div>
+        </div>
+
         <section id="planes" class="services-section">
           <h2 class="sectionTitle" style="margin-top: 0">📌 Planes</h2>
           <div id="servicesPlansGrid" class="services-grid"></div>
