--- a/zwroty.html
+++ b/zwroty.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="pl">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Zwroty &ndash; AquiVivo</title>
+    <title>Devoluciones &ndash; AquiVivo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
@@ -21,10 +21,10 @@
           <div class="heroTitleRow">
             <div class="heroIcon">&#128260;</div>
             <div>
-              <h1 class="glow-text" style="margin: 0">Zwroty i odstąpienie</h1>
+              <h1 class="glow-text" style="margin: 0">Devoluciones y desistimiento</h1>
               <div class="subtitle" style="margin-top: 6px">
-                Informacje o prawie odstąpienia oraz wyjątku dla treści
-                cyfrowych.
+                Información sobre el derecho de desistimiento y la excepción
+                para contenidos digitales.
               </div>
             </div>
           </div>
@@ -32,41 +32,64 @@
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">
-            Prawo odstąpienia (14 dni)
+            Derecho de desistimiento (14 días)
           </div>
           <div class="muted">
-            Zgodnie z przepisami UE konsument ma prawo odstąpić od umowy zawartej
-            na odległość w terminie 14 dni bez podania przyczyny.
+            De acuerdo con la normativa de la UE, el consumidor tiene derecho a
+            desistir del contrato celebrado a distancia en un plazo de 14 días
+            sin indicar el motivo.
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">
-            Wyjątek dla treści cyfrowych
+            Excepción para contenidos digitales
           </div>
           <div class="muted">
-            W przypadku zakupu treści cyfrowych, które są dostarczane natychmiast
-            po zakupie, prawo do odstąpienia wygasa w momencie uzyskania dostępu
-            do treści, jeśli użytkownik wyraził zgodę na natychmiastowe
-            świadczenie usługi i został poinformowany o utracie prawa do
-            odstąpienia.
+            En el caso de la compra de contenidos digitales que se entregan
+            inmediatamente después de la compra, el derecho de desistimiento se
+            extingue en el momento en que el usuario obtiene acceso al contenido,
+            siempre que haya dado su consentimiento para la prestación inmediata
+            del servicio y haya sido informado de la pérdida del derecho de
+            desistimiento.
             <br /><br />
-            Kupując dostęp do kursów i materiałów AquiVivo, wyrażasz zgodę na
-            natychmiastowe świadczenie usługi i przyjmujesz do wiadomości, że
-            tracisz prawo do odstąpienia od umowy po uzyskaniu dostępu do treści
-            cyfrowych.
+            Al comprar acceso a los cursos y materiales de AquiVivo, aceptas la
+            prestación inmediata del servicio y reconoces que pierdes el derecho
+            de desistimiento una vez que obtengas acceso a los contenidos
+            digitales.
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">
-            Reklamacje i kontakt
+            Servicios con cita (reprogramación y cancelación)
           </div>
           <div class="muted">
-            Wszelkie pytania dotyczące zwrotów i reklamacji prosimy kierować na
-            adres:
+            Además de tus derechos legales, para Servicios que requieren agenda (por ejemplo,
+            clases en vivo o acompañamiento), aplican estas reglas generales:
+            <ul>
+              <li>
+                Reprogramación sin costo: avisa con al menos <b>24 horas</b> (online) o
+                <b>48 horas</b> (presencial/coordinación externa).
+              </li>
+              <li>
+                Si avisas con menos tiempo o no te presentas, el Servicio puede considerarse
+                realizado (por el tiempo reservado).
+              </li>
+            </ul>
+            Los detalles pueden variar si la oferta indica una regla distinta. La versión
+            completa está en <a href="regulamin.html">Términos y condiciones</a>.
+          </div>
+        </section>
+
+        <section class="card" style="margin-top: 12px">
+          <div class="sectionTitle" style="margin-top: 0">
+            Reclamaciones y contacto
+          </div>
+          <div class="muted">
+            Para cualquier pregunta sobre devoluciones y reclamaciones, contáctanos en:
             <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a>
-            lub telefonicznie: <a href="tel:+48669697151">+48 669 697 151</a>.
+            o por teléfono: <a href="tel:+48669697151">+48 669 697 151</a>.
           </div>
         </section>
       </div>
